# snowflake-sqlalchemy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sqlalchemy-coverage2.7rc  .sqlalchemy-coverage3.4rc  .sqlalchemy-coverage3.5rc  .sqlalchemy-coverage3.6rc  .sqlalchemy-coverage3.7rc  .travis.yml  CONTRIBUTING.md  DESCRIPTION.md  DESCRIPTION.rst  DESCRIPTION.rst.edited  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  a.sh  appveyor.yml  base.py  custom_commands.py  custom_types.py  junit.xml  license_header.txt  parameters.appveyor.py.enc  parameters.py.enc  parameters_az.py.enc  parameters_gcp.py.enc  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup.py.orig  setup.py.rej  setup_.cfg  setup_.py  snowdialect.py  snowflake-sqlalchemy.code-workspace  tox.ini  (+3 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.txt
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: build_test.yml  build_test_cloud.yml  changelog.yml  cla_bot.yml  create_req_files.yml  jira-issue.yml  jira_close.yml  jira_comment.yml  jira_issue.yml  python-publish.yml  semgrep2.yml  snyk-issue.yml  snyk-pr.yml  stale_issue_bot.yml  stale_prs_and_issues.yml  test_with_ud.yml
.github/workflows/parameters/: parameters_aws.py.gpg  parameters_azure.py.gpg  parameters_gcp.py.gpg
ci/: build.sh  build_docker.sh  log_analyze_setup.sh  set_base_image.sh  test.sh  test_docker.sh  test_linux.sh  wss.sh
ci/docker/sqlalchemy_build/: Dockerfile
examples/: MovieLens1M.ipynb  NumPyDataTypeDatetime64.ipynb  Plotly.ipynb  USBabyNames.ipynb  UsaGovBitlyDemo.ipynb  iPythonSQL.ipynb  table-with-default-timestamp.py
scripts/: install.sh  install.sh.rej  py_exec.sh  run_travis.sh
snyk/: requirements.txt  requiremtnts.txt  update_requirements.py
src/snowflake/sqlalchemy/: __init__.py  _constants.py  alembic_util.py  base.py  compat.py  constants.py  custom_commands.py  custom_types.py  exc.py  functions.py  name_utils.py  orm.py  provision.py  requirements.py  secret_logging.py  snowdialect.py  structured_type_info_manager.py  util.py  version.py
test/: README.rst  __init__.py  conftest.py  test_compiler.py  test_copy.py  test_core.py  test_create.py  test_custom_types.py  test_geography.py  test_multivalues_insert.py  test_orm.py  test_pandas.py  test_qmark.py  test_quote.py  test_semi_structured_datatypes.py  test_sequence.py  test_timestamp.py  test_unit_core.py  test_unit_cte.py  test_unit_types.py  test_unit_url.py
test_mock/: test_extensions_mock.py
tested_requirements/: requirements_310.reqs  requirements_37.reqs  requirements_38.reqs  requirements_39.reqs
tests/: README.rst  conftest.py  snowdialect_mock_utils.py  test_base_quoting.py  test_cache_column_metadata.py  test_compat.py  test_compile_dynamic_table.py  test_compiler.py  test_copy.py  test_core.py  test_create.py  test_cross_database_reflection.py  test_ct.py  test_custom_functions.py  test_custom_types.py  test_decfloat.py  test_dialect_connect.py  test_geography.py  test_geometry.py  test_imports.py  test_index_reflection.py  test_keys.py  test_loader_criteria_regression.py  test_multivalues_insert.py  test_name_utils.py  test_orm.py  test_pandas.py  test_qmark.py  test_quote.py  test_quote_identifiers.py  test_reflect_dynamic_table.py  test_reflection_cache.py  test_semi_structured_datatypes.py  test_sequence.py  test_snow_3656048.py  test_snowflake_orm.py  test_structured_datatypes.py  test_table_option_quoting.py  test_timestamp.py  test_transactions.py  (+16 more)
tests/E2E/: test_select_decfloat_type.py
tests/E2E/__snapshots__/: test_select_decfloat_type.ambr
tests/__snapshots__/: test_compile_dynamic_table.ambr  test_core.ambr  test_orm.ambr  test_reflect_dynamic_table.ambr  test_structured_datatypes.ambr  test_unit_structured_types.ambr
tests/alembic_integration/: README.md  conftest.py  test_multi_schema_fk.py
tests/connector_regression/: __init__.py  conftest.py  generate_test_files.py  helpers.py  integ_helpers.py  lazy_var.py  randomize.py
tests/connector_regression/extras/: run.py  simple_select1.py
tests/connector_regression/integ/: conftest.py  test_arrow_result.py  test_async.py  test_autocommit.py  test_bindings.py  test_boolean.py  test_client_session_keep_alive.py  test_concurrent_create_objects.py  test_concurrent_insert.py  test_connection.py  test_converter.py  test_converter_more_timestamp.py  test_converter_null.py  test_cursor.py  test_cursor_binding.py  test_cursor_context_manager.py  test_dataintegrity.py  test_daylight_savings.py  test_dbapi.py  test_errors.py  test_execute_multi_statements.py  test_key_pair_authentication.py  test_large_put.py  test_large_result_set.py  test_load_unload.py  test_multi_statement.py  test_network.py  test_numpy_binding.py  test_pickle_timestamp_tz.py  test_put_get.py  test_put_get_compress_enc.py  test_put_get_medium.py  test_put_get_snow_4525.py  test_put_get_user_stage.py  test_put_get_with_aws_token.py  test_put_get_with_azure_token.py  test_put_get_with_gcp_account.py  test_put_windows_path.py  test_qmark.py  test_query_cancelling.py  (+6 more)
tests/connector_regression/unit/: conftest.py  test_auth.py  test_auth_oauth.py  test_auth_okta.py  test_auth_webbrowser.py  test_binaryformat.py  test_bind_upload_agent.py  test_cache.py  test_connection.py  test_construct_hostname.py  test_converter.py  test_cursor.py  test_datetime.py  test_dbapi.py  test_encryption_util.py  test_errors.py  test_gcs_client.py  test_linux_local_file_cache.py  test_log_secret_detector.py  test_mfa_no_cache.py  test_ocsp.py  test_oob_secret_detector.py  test_parse_account.py  test_proxies.py  (+9 more)
tests/custom_tables/: __init__.py  test_compile_dynamic_table.py  test_compile_hybrid_table.py  test_compile_iceberg_table.py  test_compile_snowflake_table.py  test_create_dynamic_table.py  test_create_hybrid_table.py  test_create_iceberg_table.py  test_create_snowflake_table.py  test_generic_options.py  test_reflect_dynamic_table.py  test_reflect_hybrid_table.py  test_reflect_iceberg_table.py  test_reflect_snowflake_table.py
tests/sqlalchemy_test_suite/: README.md  conftest.py  test_suite.py  test_suite_20.py
(+71 files in other folders)
