[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-sqlalchemy"
dynamic = ["version"]
description = "Snowflake SQLAlchemy Dialect"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Snowflake Inc.", email = "triage-snowpark-python-api-dl@snowflake.com" },
]
keywords = ["Snowflake", "analytics", "cloud", "database", "db", "warehouse"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: SQL",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["SQLAlchemy>=2.0.0", "snowflake-connector-python<5.0.0"]

[tool.hatch.version]
path = "src/snowflake/sqlalchemy/version.py"

[project.optional-dependencies]
development = [
  "alembic",
  "mypy",
  "pre-commit",
  "pytest",
  "setuptools",
  "pytest-cov",
  "pytest-timeout",
  "pytest-rerunfailures",
  "pytest-xdist",
  "pytz",
  "numpy",
  "syrupy",
  "alembic",
]
pandas = ["snowflake-connector-python[pandas]"]

[project.entry-points."sqlalchemy.dialects"]
snowflake = "snowflake.sqlalchemy:dialect"

[project.urls]
Changelog = "https://github.com/snowflakedb/snowflake-sqlalchemy/blob/main/DESCRIPTION.md"
Documentation = "https://docs.snowflake.com/en/user-guide/sqlalchemy.html"
Homepage = "https://www.snowflake.com/"
Issues = "https://github.com/snowflakedb/snowflake-sqlalchemy/issues"
Source = "https://github.com/snowflakedb/snowflake-sqlalchemy"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake"]

[tool.hatch.envs.default]
extra-dependencies = ["SQLAlchemy>=2.0.0"]
features = ["development", "pandas"]
python = "3.9"
installer = "uv"

[tool.hatch.envs.default.env-vars]
COVERAGE_FILE = "coverage.xml"

[tool.hatch.envs.default.scripts]
check = "pre-commit run --all-files"
test-dialect = "pytest -ra -vvv --tb=short --cov snowflake.sqlalchemy --cov-append --junitxml ./junit.xml --ignore=tests/sqlalchemy_test_suite tests/"
test-dialect-compatibility = "pytest -ra -vvv --tb=short --cov snowflake.sqlalchemy --cov-append --junitxml ./junit.xml tests/sqlalchemy_test_suite"
test-dialect-aws = "pytest -m \"aws\" -ra -vvv --tb=short --cov snowflake.sqlalchemy --cov-append --junitxml ./junit.xml --ignore=tests/sqlalchemy_test_suite tests/"
gh-cache-sum = "python -VV | sha256sum | cut -d' ' -f1"
check-import = "python -c 'import snowflake.sqlalchemy; print(snowflake.sqlalchemy.__version__)'"
type-check = "mypy src/snowflake/sqlalchemy/"

[[tool.hatch.envs.release.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
features = ["development", "pandas"]

[tool.hatch.envs.release.scripts]
test-dialect = "pytest -ra -vvv --tb=short --ignore=tests/sqlalchemy_test_suite tests/"
test-compatibility = "pytest -ra -vvv --tb=short tests/sqlalchemy_test_suite tests/"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-m 'not feature_max_lob_size and not aws and not requires_external_volume'"
markers = [
  # Optional dependency groups markers
  "lambda: AWS lambda tests",
  "pandas: tests for pandas integration",
  "sso: tests for sso optional dependency integration",
  # Cloud provider markers
  "aws: tests for Amazon Cloud storage",
  "azure: tests for Azure Cloud storage",
  "gcp: tests for Google Cloud storage",
  # Test type markers
  "integ: integration tests",
  "unit: unit tests",
  "skipolddriver: skip for old driver tests",
  # Other markers
  "timeout: tests that need a timeout time",
  "internal: tests that could but should only run on our internal CI",
  "requires_external_volume: tests that needs a external volume to be executed",
  "external: tests that could but should only run on our external CI",
  "feature_max_lob_size: tests that could but should only run on our external CI",
  "mypy: typing tests",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
# Ignore stubs that are missing for snowflake-connector-python
ignore_missing_imports = true
# Check function bodies even when unannotated
check_untyped_defs = true
# Surface stale # type: ignore comments as annotations are added
warn_unused_ignores = true

# Files not yet annotated — errors suppressed until each phase lands.
# Remove the override for a file once its phase is complete.
[[tool.mypy.overrides]]
module = [
  "snowflake.sqlalchemy.alembic_util",
  "snowflake.sqlalchemy.base",
  "snowflake.sqlalchemy.custom_commands",
  "snowflake.sqlalchemy.custom_types",
  "snowflake.sqlalchemy.orm",
  "snowflake.sqlalchemy.snowdialect",
  "snowflake.sqlalchemy.sql.custom_schema.clustered_table",
  "snowflake.sqlalchemy.sql.custom_schema.custom_table_base",
  "snowflake.sqlalchemy.sql.custom_schema.custom_table_prefix",
  "snowflake.sqlalchemy.sql.custom_schema.dynamic_table",
  "snowflake.sqlalchemy.sql.custom_schema.hybrid_table",
  "snowflake.sqlalchemy.sql.custom_schema.iceberg_table",
  "snowflake.sqlalchemy.sql.custom_schema.snowflake_table",
  "snowflake.sqlalchemy.sql.custom_schema.table_from_query",
  "snowflake.sqlalchemy.sql.custom_schema.options.as_query_option",
  "snowflake.sqlalchemy.sql.custom_schema.options.cluster_by_option",
  "snowflake.sqlalchemy.sql.custom_schema.options.identifier_option",
  "snowflake.sqlalchemy.sql.custom_schema.options.invalid_table_option",
  "snowflake.sqlalchemy.sql.custom_schema.options.keyword_option",
  "snowflake.sqlalchemy.sql.custom_schema.options.literal_option",
]
ignore_errors = true
