[bdist_wheel]
universal = 1

[metadata]
name = snowflake-sqlalchemy
version = 1.3.5
description = Snowflake SQLAlchemy Dialect
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
url = https://www.snowflake.com/
author = Snowflake, Inc
author_email = triage-snowpark-python-api-dl@snowflake.com
license = Apache-2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: SQL
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Snowflake db database cloud analytics warehouse
project_urls =
    Documentation=https://docs.snowflake.com/en/user-guide/sqlalchemy.html
    Source=https://github.com/snowflakedb/snowflake-sqlalchemy
    Issues=https://github.com/snowflakedb/snowflake-sqlalchemy/issues
    Changelog=https://github.com/snowflakedb/snowflake-sqlalchemy/blob/main/DESCRIPTION.md

[options]
python_requires = >=3.7
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
    sqlalchemy<2.0.0,>=1.4.0
; Keep in sync with extras dependency
    snowflake-connector-python<3.0.0
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
include = snowflake.*

[options.entry_points]
sqlalchemy.dialects =
    snowflake=snowflake.sqlalchemy:dialect

[options.extras_require]
development =
    pytest
    pytest-cov
    pytest-rerunfailures
    pytest-timeout
    mock
    pytz
    numpy
pandas =
    snowflake-connector-python[pandas]<3.0.0

[sqla_testing]
requirement_cls=snowflake.sqlalchemy.requirements:Requirements
profile_file=tests/profiles.txt
